[package]
name = "place-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
csv = "1.2.2"
flate2 = "1.0.26"
num_enum = "0.6.1"
rayon = "1.7.0"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-rustls"] }
